# mediscient

./: README.md  pyproject.toml
mediscient_custom/: api.py  hooks.py  modules.txt
mediscient_custom/fixtures/: letter_head.json  print_format.json
mediscient_custom/mediscient_custom/custom/: delivery_note.json  delivery_note_item.json  material_request.json  material_request_item.json  purchase_order.json  purchase_receipt.json  purchase_receipt_item.json  supplier.json  supplier_group.json
mediscient_custom/mediscient_custom/notification/reassessment_reminder/: reassessment_reminder.html  reassessment_reminder.json
mediscient_custom/mediscient_custom/report/supplier_reassessment_report/: supplier_reassessment_report.js  supplier_reassessment_report.json  supplier_reassessment_report.py
mediscient_custom/public/js/: common.js
